heapuse/tests/ui/fail-derive-too-many-attrs-1.stderr
error: too many heap_size attributes
 --> tests/ui/fail-derive-too-many-attrs-1.rs:8:7
  |
8 |     #[heap_size(with = "mod::a", with = "mod::b")]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
